[package]
name = "pulsar-rust-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
pulsar = "6.3.1"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
sysinfo = "0.30"

# debug tokio
console-subscriber = "0.4.1" 
tokio-metrics = "0.4.0"

#[features]
#tokio-debug-console = ["console-subscriber"]  # Enable console-subscriber only in debug

